add link to prereqs on index page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         <h2> Git - Intro to version control</h2>
         <p>Material can be found <a href="git/index.html">here</a>.</p>
       </section>
+
+      <section>
+        <h2>Prerequisites</h2>
+        <p>Material can be found <a href="indexpages/prerequisites.html">here</a>.</p>
+      </section>
+
       </article>
       <div class="footer">
         This work is derived from prior works that are Copyright © <a href="http://software-carpentry.org">Software Carpentry</a>
