Fix spelling mistakes, update email to point to Ryan's for install help

--- a/indexpages/prerequisites.html
+++ b/indexpages/prerequisites.html
@@ -25,11 +25,11 @@
 
       <section>
         <h2> Software Prerequisites </h2>
-        <p><strong>Prior to the workshop, it is vital that you install some software on your laptop and create an account at Github by following the instructions below!</strong></p>
+        <p><strong>Prior to the workshop, it is vital that you install some software on your laptop and create an account at GitHub by following the instructions below!</strong></p>
         <p>There is little time during the workshop to deal with installation problems, so it makes the day run much more smoothly if you arrive with your software already installed.</p>
         <p><strong>Please make sure you run the verification script that can be found at the bottom of this page!</strong></p>
         <h3 id="help">Help!</h3>
-        <p>Take a look at the <a href="https://github.com/swcarpentry/workshop-template/wiki/Configuration-Problems-and-Solutions">Configuration Problems and Solutions wiki page</a> for help with any installation problems. If you are still having trouble please <a href="mailto:jdg1g14@soton.ac.uk?Subject=Summer_Academy_Help"> contact us</a>.</p>
+        <p>Take a look at the <a href="https://github.com/swcarpentry/workshop-template/wiki/Configuration-Problems-and-Solutions">Configuration Problems and Solutions wiki page</a> for help with any installation problems. If you are still having trouble please <a href="mailto:ryan.pepper@soton.ac.uk?Subject=Summer_Academy_Help"> contact us, and make sure you arrive early so that we can try and address your problems before the course starts. Please let someone know at the information desk when you arrive that you need help and they'll point you to the right people to give you this. </a>.</p>
 
         <h3 id="text-editor">Text Editor</h2>
         <p>A text editor is the piece of software you use to view and write code. If you have a preferred text editor, please use it. If you don't have one, we recommend the following.</p>
@@ -59,7 +59,7 @@ git config --global core.editor "'c:/program files (x86)/Notepad++/notepad++.exe
         <p>To exit nano press CTRL+X (you might be prompted you to save or discard modified buffer - just type “N” to exit without saving).</p>
 
         <h3 id="python">Python</h2>
-        <p>We will use Python 3, because it is the newest version of Python. We will also use the numpy and matplotlib libraries. Fortunately, these do not need to be installed separately! The “Python 3 Anaconda” installation provides everything Python-related you will need for the workshop. Even if you allready have Python set up on your machine we advice that you still install Anaconda - It is easy to remove and will not effect your current set up. To install Anaconda, follow the instructions below.</p>
+        <p>We will use Python 3, because it is the newest version of Python. We will also use the numpy and matplotlib libraries. Fortunately, these do not need to be installed separately! The “Python 3 Anaconda” installation provides everything Python-related you will need for the workshop. Even if you already have Python set up on your machine we advice that you still install Anaconda - It is easy to remove and will not effect your current set up. To install Anaconda, follow the instructions below.</p>
         <h4 id="windows-2">Windows</h4>
         <p>Download the <a href="https://repo.continuum.io/archive/Anaconda3-4.4.0-Windows-x86_64.exe">Python 3 Anaconda installer</a>. Double click the installer and follow the instructions.</p>
         <h4 id="mac-os-x-1">Mac OS X</h4>
@@ -67,7 +67,7 @@ git config --global core.editor "'c:/program files (x86)/Notepad++/notepad++.exe
         <h4 id="linux-1">Linux</h4>
         <p>Download the <a href="https://repo.continuum.io/archive/Anaconda3-4.4.0-Linux-x86_64.sh">Python 3 Anaconda installation script</a>. Install via the terminal like this:</p>
         <pre class="code"><code>bash Anaconda3-4.4.0-Linux-x86_64.sh</code></pre>
-        <h4 id="Allready-Have-Conda">I allready have Anaconda!!</h4>
+        <h4 id="Allready-Have-Conda">I already have Anaconda!!</h4>
         <p>You can create a python 3.6 enviroment using the following code;</p>
         <pre class="code"><code>conda create -n py36 python=3.6 jupyter numpy matplotlib</code></pre>
         <p>To use this new enviroment it is necessary to run the following command;</p>
